...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GameConfigFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/game_name"
        android:layout_width="414dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/game_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
...
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/rand_mode"
            android:textSize="20sp" />

        <Button
            android:id="@+id/statsbutton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/stats"
            android:textSize="20sp" />

        <Button
            android:id="@+id/moreinfobutton"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/more_info"
            android:textSize="20sp" />

    </LinearLayout>
...
