...
            android:layout_marginTop="32dp"
            android:text="@string/to_be_millionaire"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wwminfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/millionaire_info"
            android:textSize="24sp" />

        <TextView
...
            android:text="@string/tpinfo"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/gobackbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-1dp" />
...
