...
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/bestcategorylabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bestcategory"
            android:textSize="24sp"
            android:textStyle="bold" />
...
